force-app/main/default/objects/sked__Location__c/fields/sked_Room_Size__c.field-meta.xml
<CustomField>
    <fullName>sked_Room_Size__c</fullName>
    <label>Room Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;800 Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>801-1200 Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>1201-1600 Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>1601-2000 Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>2001-2400 Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>2401-2800 Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>2801-3200 Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>3201-3600 Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>3601-4000 Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>4001-4500 Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>4501-5000 Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>&gt;5000 Sq. Ft.</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>