force-app/main/default/objects/sked__Location__c/fields/sked_Safety_Emergency_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>sked_Safety_Emergency_Action_Plan__c</fullName>
    <label>Safety/Emergency Action Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>