force-app/main/default/objects/sked__Location__c/fields/sked_Same_as_ARC_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>sked_Same_as_ARC_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same as ARC Vehicle</label>
    <type>Checkbox</type>
</CustomField>