force-app/main/default/objects/sked__Location__c/fields/sked_Secondary_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>sked_Secondary_Evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Evaluation</label>
    <type>Checkbox</type>
</CustomField>