force-app/main/default/objects/sked__Location__c/fields/sked_Security_Directions__c.field-meta.xml
<CustomField>
    <fullName>sked_Security_Directions__c</fullName>
    <label>Security Directions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>