force-app/main/default/objects/sked__Location__c/fields/sked_Security_Information_Needed__c.field-meta.xml
<CustomField>
    <fullName>sked_Security_Information_Needed__c</fullName>
    <inlineHelpText>Information provided by staff day of drive upon arrival at blood drive.</inlineHelpText>
    <label>Security Information Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle License #</fullName>
            </value>
            <value>
                <fullName>Staff Full Names</fullName>
            </value>
            <value>
                <fullName>SSN</fullName>
            </value>
            <value>
                <fullName>Date of Birth</fullName>
            </value>
            <value>
                <fullName>US Citizen</fullName>
            </value>
            <value>
                <fullName>Drivers Licenses #</fullName>
            </value>
            <value>
                <fullName>Real ID</fullName>
            </value>
            <value>
                <fullName>Safety Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>