force-app/main/default/objects/sked__Location__c/fields/sked_Site_Close__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Close__c</fullName>
    <label>Site Close</label>
    <type>Time</type>
</CustomField>