force-app/main/default/objects/sked__Location__c/fields/sked_Site_Collection_Operation_Count__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Collection_Operation_Count__c</fullName>
    <label>Site Collection Operation Count</label>
    <summaryForeignKey>sked_Site_Collection_Operation__c.sked_Site__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>