force-app/main/default/objects/sked__Location__c/fields/sked_Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Locations (Site Contact)</relationshipLabel>
    <relationshipName>Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>