force-app/main/default/objects/sked__Location__c/fields/sked_Site_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Contact_Email__c</fullName>
    <formula>sked_Site_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Contact Email</label>
    <type>Text</type>
</CustomField>