force-app/main/default/objects/sked__Location__c/fields/sked_Site_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Contact_Phone__c</fullName>
    <formula>sked_Site_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Contact Phone</label>
    <type>Text</type>
</CustomField>