force-app/main/default/objects/sked__Location__c/fields/sked_Site_Inspection_Comments__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Inspection_Comments__c</fullName>
    <inlineHelpText>If applicable, enter suitability concerns and document approver</inlineHelpText>
    <label>Site Inspection Comments</label>
    <type>TextArea</type>
</CustomField>