force-app/main/default/objects/sked__Location__c/fields/sked_Site_Inspection_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Inspection_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Site is deemed suitable and as applicable concerns are documented and approved.</inlineHelpText>
    <label>Site Inspection Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>