force-app/main/default/objects/sked__Location__c/fields/sked_Site_Notes__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Notes__c</fullName>
    <label>Site Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>