force-app/main/default/objects/sked__Location__c/fields/sked_Site_Open__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Open__c</fullName>
    <label>Site Open</label>
    <type>Time</type>
</CustomField>