force-app/main/default/objects/sked__Location__c/fields/sked_Site_Room_Phone__c.field-meta.xml
<CustomField>
    <fullName>sked_Site_Room_Phone__c</fullName>
    <label>Site Room Phone</label>
    <type>Phone</type>
</CustomField>