force-app/main/default/objects/sked__Location__c/fields/sked_Sponsor_Keyword__c.field-meta.xml
<CustomField>
    <fullName>sked_Sponsor_Keyword__c</fullName>
    <label>Sponsor Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>