force-app/main/default/objects/sked__Location__c/fields/sked_Staff_List__c.field-meta.xml
<CustomField>
    <fullName>sked_Staff_List__c</fullName>
    <inlineHelpText>Staff List and information requested by sponsor.</inlineHelpText>
    <label>Staff List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle License #</fullName>
            </value>
            <value>
                <fullName>Staff Full Names</fullName>
            </value>
            <value>
                <fullName>SSN</fullName>
            </value>
            <value>
                <fullName>Date of Birth</fullName>
            </value>
            <value>
                <fullName>US Citizen</fullName>
            </value>
            <value>
                <fullName>Drivers Licenses #</fullName>
            </value>
            <value>
                <fullName>Real ID</fullName>
            </value>
            <value>
                <fullName>Safety Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>