force-app/main/default/objects/sked__Location__c/fields/sked_Staff_Personal_Parking_Directions__c.field-meta.xml
<CustomField>
    <fullName>sked_Staff_Personal_Parking_Directions__c</fullName>
    <label>Staff Personal Parking Directions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>