force-app/main/default/objects/sked__Location__c/fields/sked_State__c.field-meta.xml
<CustomField>
    <fullName>sked_State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>