force-app/main/default/objects/sked__Location__c/fields/sked_Travel_Distance_to_Staging_Location__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Distance_to_Staging_Location__c</fullName>
    <label>Travel Distance to Staging Location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>