force-app/main/default/objects/sked__Location__c/fields/sked_Travel_Time_Breakdown_JSON_2__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time_Breakdown_JSON_2__c</fullName>
    <description>Site to CO</description>
    <label>Travel Time Breakdown JSON 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>