force-app/main/default/objects/sked__Location__c/fields/sked_Travel_Time_Breakdown_JSON__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time_Breakdown_JSON__c</fullName>
    <description>CO to Site</description>
    <label>Travel Time Breakdown JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>