force-app/main/default/objects/sked__Location__c/fields/sked_UFID__c.field-meta.xml
<CustomField>
    <fullName>sked_UFID__c</fullName>
    <label>UFID</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>