force-app/main/default/objects/sked__Location__c/fields/sked_UFID_AN__c.field-meta.xml
<CustomField>
    <fullName>sked_UFID_AN__c</fullName>
    <label>UFID AN</label>
    <type>AutoNumber</type>
</CustomField>