force-app/main/default/objects/sked__Location__c/fields/sked_Unloading_Conditions__c.field-meta.xml
<CustomField>
    <fullName>sked_Unloading_Conditions__c</fullName>
    <inlineHelpText>Consider Role Time Variance if Unloading Conditions required additional set up or breakdown time.</inlineHelpText>
    <label>Unloading Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single vehicle unload​</fullName>
                <label>Single Vehicle Unload</label>
            </value>
            <value>
                <fullName>Dock Available​</fullName>
            </value>
            <value>
                <fullName>Dock Required</fullName>
            </value>
            <value>
                <fullName>Street Unload​</fullName>
            </value>
            <value>
                <fullName>Forklift Needed​</fullName>
            </value>
            <value>
                <fullName>Security​</fullName>
            </value>
            <value>
                <fullName>Distance to donation Area &gt;200ft</fullName>
                <label>Distance to Donation Area &gt;200ft</label>
            </value>
            <value>
                <fullName>Unpaved​</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>