force-app/main/default/objects/sked__Location__c/fields/sked_Unloading_Directions_Details__c.field-meta.xml
<CustomField>
    <fullName>sked_Unloading_Directions_Details__c</fullName>
    <label>Unloading Directions Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>