force-app/main/default/objects/sked__Location__c/fields/sked_Wireless_Policy__c.field-meta.xml
<CustomField>
    <fullName>sked_Wireless_Policy__c</fullName>
    <inlineHelpText>Accepted  
Connectivity Wired Only: allowed but not functional 
Sponsor Wired Only: wireless not allowed to be used  
Prohibited: not allowed on site</inlineHelpText>
    <label>Wireless Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
                <default>true</default>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>Prohibited</fullName>
            </value>
            <value>
                <fullName>Connectivity Wired Only</fullName>
            </value>
            <value>
                <fullName>Sponsor Wired Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>