force-app/main/default/objects/sked__Location__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <defaultValue>&quot;Standard New Form&quot;</defaultValue>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard New Form</fullName>
            </value>
            <value>
                <fullName>Custom New Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>