force-app/main/default/objects/sked__Location__c/fields/Sponsor_Security_Form_Required__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Security_Form_Required__c</fullName>
    <inlineHelpText>Sponsor provided form to be completed. Sponsor form should be uploaded to Site Files for AP&amp;S to access for completion.</inlineHelpText>
    <label>Sponsor Security Form Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Drive</fullName>
            </value>
            <value>
                <fullName>Day of Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>