force-app/main/default/objects/sked__Location__c/fields/TMS_Site__c.field-meta.xml
<CustomField>
    <fullName>TMS_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMS Site</label>
    <referenceTo>TMS_Site__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>