force-app/main/default/objects/sked__Location__c/recordTypes/sked_Fixed_Site.recordType-meta.xml
<RecordType>
    <fullName>sked_Fixed_Site</fullName>
    <active>true</active>
    <label>Fixed Site</label>
</RecordType>