force-app/main/default/objects/sked__Location__c/recordTypes/sked_Mobile_Site.recordType-meta.xml
<RecordType>
    <fullName>sked_Mobile_Site</fullName>
    <active>true</active>
    <label>Mobile Site</label>
</RecordType>