force-app/main/default/objects/sked__Location__c/validationRules/Block_National_Name_EditAcces_To_Non_APS.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_National_Name_EditAcces_To_Non_APS</fullName>
    <active>true</active>
    <description>HRP-4954DRD user cannot edit National Name field
HRP-5715. non APS user should not edit national name</description>
    <errorConditionFormula>AND(
   NOT (CONTAINS($Profile.Name,&quot;APS&quot;)),
   ISChanged( sked_National_Name__c ),  
   NOT($Profile.Name = &quot;System Administrator&quot;),
   NOT($Profile.Name = &quot;Global Admin&quot;)  
)</errorConditionFormula>
    <errorMessage>DRD user cannot have editAccess National Name field</errorMessage>
</ValidationRule>