force-app/main/default/objects/sked__Location__c/validationRules/Elevator_close_cannot_be_before_open.validationRule-meta.xml
<ValidationRule>
    <fullName>Elevator_close_cannot_be_before_open</fullName>
    <active>true</active>
    <description>Elevator close cannot be before Elevator open</description>
    <errorConditionFormula>(IsChanged(sked_Elevator_Open__c)|| IsChanged(sked_Elevator_Close__c))&amp;&amp; sked_Elevator_Close__c&lt;sked_Elevator_Open__c</errorConditionFormula>
    <errorMessage>Elevator Close cannot be prior to Elevator Open</errorMessage>
</ValidationRule>