force-app/main/default/objects/sked__Location__c/validationRules/ElevatorOpenCloseMustBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ElevatorOpenCloseMustBeBlank</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(sked_Elevator_Type__c, &#39;&#39;) &amp;&amp; 
(
!ISNULL(sked_Elevator_Open__c) || !ISNULL(sked_Elevator_Close__c)
)</errorConditionFormula>
    <errorMessage>Elevator Open/Close must be blank when Elevator Type is None</errorMessage>
</ValidationRule>