force-app/main/default/objects/sked__Location__c/validationRules/NoSpecialCharsForNationalName.validationRule-meta.xml
<ValidationRule>
    <fullName>NoSpecialCharsForNationalName</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( sked_National_Name__c,&quot;^[a-z A-Z0-9]*$&quot;))</errorConditionFormula>
    <errorMessage>Cannot use special characters for National Name.</errorMessage>
</ValidationRule>