force-app/main/default/objects/sked__Location__c/validationRules/RequiresOnSiteFoodCanteenOther.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiresOnSiteFoodCanteenOther</fullName>
    <active>true</active>
    <errorConditionFormula>INCLUDES(sked_On_Site_Food_Canteen_Requirements__c, &quot;Other&quot;) &amp;&amp; ISBLANK(sked_On_Site_Food_Canteen_Other__c)</errorConditionFormula>
    <errorMessage>On-Site Food/Canteen Other is required.</errorMessage>
</ValidationRule>