force-app/main/default/objects/sked__Location__c/validationRules/RequiresPayForParkingDetails.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiresPayForParkingDetails</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( sked_Pay_for_Parking__c ,&#39;Other&#39;) &amp;&amp;  ISBLANK( sked_Pay_for_Parking_Details__c )</errorConditionFormula>
    <errorMessage>Pay for Parking Details is required.</errorMessage>
</ValidationRule>