force-app/main/default/objects/sked__Location__c/validationRules/RestrictDRDToCreateFixedSite.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictDRDToCreateFixedSite</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR( $Profile.Name = &quot;DRD Profile&quot;,$Profile.Name = &quot;DRD Manager&quot;) , RecordType.Name = &quot;Fixed Site&quot;, ISNEW())</errorConditionFormula>
    <errorMessage>Selected profile is not allowed to create Fixed Site.</errorMessage>
</ValidationRule>