force-app/main/default/objects/sked__Location__c/validationRules/RestrictSiteCreationUsingStandardForm.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictSiteCreationUsingStandardForm</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Source__c, &quot;Standard New Form&quot;)</errorConditionFormula>
    <errorMessage>Cannot use standard form to create site</errorMessage>
</ValidationRule>