force-app/main/default/objects/sked__Location__c/validationRules/Site_close_cannot_be_before_site_open.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_close_cannot_be_before_site_open</fullName>
    <active>true</active>
    <errorConditionFormula>(IsChanged(sked_Site_Open__c)|| IsChanged(sked_Site_Close__c))&amp;&amp; sked_Site_Close__c&lt;sked_Site_Open__c</errorConditionFormula>
    <errorMessage>Site close cannot be prior to site open</errorMessage>
</ValidationRule>