force-app/main/default/objects/sked__Location__c/validationRules/SiteMainPhoneFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>SiteMainPhoneFormat</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK(sked_Site_Main_Phone__c )) &amp;&amp; 
NOT(
    AND(
      LEN( sked_Site_Main_Phone__c ) == 12,
      ISNUMBER(LEFT(sked_Site_Main_Phone__c, 3)),
      LEFT(RIGHT( sked_Site_Main_Phone__c ,9), 1) == &#39;-&#39;,
      ISNUMBER(LEFT(RIGHT( sked_Site_Main_Phone__c, 8), 3)),
      LEFT(RIGHT( sked_Site_Main_Phone__c ,5), 1) == &#39;-&#39;,
      ISNUMBER(RIGHT( sked_Site_Main_Phone__c , 4))
    )
  )</errorConditionFormula>
    <errorMessage>Site Main Phone should be in this format: 999-999-9999.</errorMessage>
</ValidationRule>