force-app/main/default/objects/sked__Location__c/validationRules/SiteRoomPhoneFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>SiteRoomPhoneFormat</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(sked_Site_Room_Phone__c)) &amp;&amp; 
NOT(
    AND( 
      LEN( sked_Site_Room_Phone__c ) == 12,
      ISNUMBER(LEFT(sked_Site_Room_Phone__c, 3)),
      LEFT(RIGHT( sked_Site_Room_Phone__c ,9), 1) == &#39;-&#39;,
      ISNUMBER(LEFT(RIGHT( sked_Site_Room_Phone__c, 8), 3)),
      LEFT(RIGHT( sked_Site_Room_Phone__c ,5), 1) == &#39;-&#39;,
      ISNUMBER(RIGHT( sked_Site_Room_Phone__c , 4))
    )
  )</errorConditionFormula>
    <errorMessage>Site Room Phone should be in this format: 999-999-9999.</errorMessage>
</ValidationRule>