force-app/main/default/objects/sked__Location__c/listViews/Adrian_MI_CMRTVs_Location.listView-meta.xml
<ListView>
    <fullName>Adrian_MI_CMRTVs_Location</fullName>
    <filterScope>Queue</filterScope>
    <label>Adrian MI: CMRTVs</label>
    <queue>Adrian_MI_CMRTVs</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>