force-app/main/default/objects/sked__Location__c/listViews/Alameda_CA_RTVs1_Location.listView-meta.xml
<ListView>
    <fullName>Alameda_CA_RTVs1_Location</fullName>
    <filterScope>Queue</filterScope>
    <label>Alameda CA: RTVs</label>
    <queue>Alameda_CA_RTVs1</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>