force-app/main/default/objects/sked__Location__c/listViews/Albany_NY_DMRTVs_Location.listView-meta.xml
<ListView>
    <fullName>Albany_NY_DMRTVs_Location</fullName>
    <filterScope>Queue</filterScope>
    <label>Albany NY: DMRTVs</label>
    <queue>Albany_NY_DMRTVs</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>