force-app/main/default/objects/sked__Location__c/listViews/All_Initial_Review_Pending_Sites.listView-meta.xml
<ListView>
    <fullName>All_Initial_Review_Pending_Sites</fullName>
    <columns>NAME</columns>
    <columns>sked_Collection_Operation_Name__c</columns>
    <columns>sked_National_Name__c</columns>
    <columns>Initial_Reviewer__c</columns>
    <columns>National_Name_Initial_Review_Date__c</columns>
    <columns>National_Name_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>National_Name_Status__c</field>
        <operation>equals</operation>
        <value>Initial Review Pending</value>
    </filters>
    <label>National Name_All Initial Rev. Pending</label>
    <sharedTo>
        <group>APS_Users</group>
    </sharedTo>
</ListView>