force-app/main/default/objects/sked__Location__c/listViews/All_Mobile_Sites.listView-meta.xml
<ListView>
    <fullName>All_Mobile_Sites</fullName>
    <columns>NAME</columns>
    <columns>sked_City__c</columns>
    <columns>sked_State__c</columns>
    <columns>sked_County__c</columns>
    <columns>sked_Physical_Location_Type__c</columns>
    <columns>sked_Collection_Operation__c</columns>
    <columns>ARC_Region__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>sked__Location__c.sked_Mobile_Site</value>
    </filters>
    <filters>
        <field>sked_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>sked_Collection_Operation__c</field>
        <operation>contains</operation>
        <value>Los</value>
    </filters>
    <label>All Mobile Sites</label>
</ListView>