force-app/main/default/objects/sked__Location__c/listViews/Altoona_PA_DMRTVs_Location.listView-meta.xml
<ListView>
    <fullName>Altoona_PA_DMRTVs_Location</fullName>
    <filterScope>Queue</filterScope>
    <label>Altoona PA: DMRTVs</label>
    <queue>Altoona_PA_DMRTVs</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>