force-app/main/default/objects/sked__Location__c/listViews/Altoona_PA_RTVs1_Location.listView-meta.xml
<ListView>
    <fullName>Altoona_PA_RTVs1_Location</fullName>
    <filterScope>Queue</filterScope>
    <label>Altoona PA: RTVs</label>
    <queue>Altoona_PA_RTVs1</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>