force-app/main/default/objects/sked__Location__c/listViews/Arlington_TX_CMRTVs_Location.listView-meta.xml
<ListView>
    <fullName>Arlington_TX_CMRTVs_Location</fullName>
    <filterScope>Queue</filterScope>
    <label>Arlington TX: CMRTVs</label>
    <queue>Arlington_TX_CMRTVs</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>